fixed typos across physics guide and quiz, added acceleration formula on 'specific variables' section, worked on 'algebra in physics section' by introducing diagram and graph concepts, now starting instantaneous velocity explanation in regards to a position vs. time graph

--- a/Quiz.html
+++ b/Quiz.html
@@ -62,7 +62,7 @@ function check(btn, correct, message, feedbackId) {
 <button class="quiz-btn" onclick="check(this, false, 'Actually, displacement is the change in position of an object', 'feedback4')">Displacement and position are related</button>
 <button class="quiz-btn" onclick="check(this, true, 'Exactly! Acceleration measures the change of velocity over time', 'feedback4')">Acceleration and velocity are not related</button>
 <button class="quiz-btn" onclick="check(this, true, 'Right! Vectors have magnitude and direction while scalar quantities only have magnitude', 'feedback4')">Vectors have one component while scalar quantities have two</button>
-<button class="quiz-btn" onclick="check(this, false, 'Not quite. Vectors do have two parts, magntitude and direction, while scalar quantities have one, magnitude', 'feedback4')">Vectors have two components while scalar quantities have one</button>
+<button class="quiz-btn" onclick="check(this, false, 'Not quite. Vectors do have two parts, magnitude and direction, while scalar quantities have one, magnitude', 'feedback4')">Vectors have two components while scalar quantities have one</button>
 
 <div id="feedback4" style="margin-top:10px; font-weight:bold;"></div>
 
@@ -91,7 +91,7 @@ function check(btn, correct, message, feedbackId) {
 <div id="feedback7" style="margin-top:10px; font-weight:bold;"></div>
 
 <p>8. What does the reference point and coordinate system tell someone?</p>
-<button class="quiz-btn" onclick="check(this, true, 'Correct! A physicist can choose which direction is positive or negative, though the convention is left = negative and right = positive','feedback8')">The reference point is the intial position of an object while the coordinate system is chosen to define which directions are positive and negative</button>
+<button class="quiz-btn" onclick="check(this, true, 'Correct! A physicist can choose which direction is positive or negative, though the convention is left = negative and right = positive','feedback8')">The reference point is the initial position of an object while the coordinate system is chosen to define which directions are positive and negative</button>
 <button class="quiz-btn" onclick="check(this, false, 'Actually, velocity and displacement are not directly stated in these concepts', 'feedback8')">The reference point is the initial velocity of an object while the coordinate system represents displacement</button>
 <button class="quiz-btn" onclick="check(this, false, 'Incorrect, initial position can be revealed but only through the reference point', 'feedback8')">The reference point is the acceleration of an object while the coordinate system shows the position</button>
 <button class="quiz-btn" onclick="check(this, false, 'Not quite. Only the coordinate system reveals the directions of a physics situation', 'feedback8')">Both tell the directions of a physics problem</button>
