finished copying lesson 1 and 2 on readme.md, made a little more progress on quiz #2

--- a/Quiz2.html
+++ b/Quiz2.html
@@ -32,7 +32,7 @@ function check(btn, correct, message, feedbackId) {
 
 <h1>Practice Quiz #2</h1>
 
-<p>1. </p>
+<p>1. After the traffic light had turned green, a truck zoomed past a car at a speed of $30 m/s$ while maintaining constant velocity. The car started from rest and picked up a constant acceleration of $5 m/s^2$ once it was clear to go. <b>How much time does it take for the car to catch up with the truck? Also, describe the motions on an acceleration vs. time graph.</b></p>
 
 <button class="quiz-btn" onclick="check(this, false, 'Not quite! Try again.', 'feedback')"></button>
 
