finished quiz #2 by adding a few more questions (now 10 total), now working on lesson 3 but starting off with 'kinematic equations'

--- a/Quiz.html
+++ b/Quiz.html
@@ -20,7 +20,7 @@
 function check(btn, correct, message, feedbackId) {
   btn.style.background = correct ? 'lightgreen' : 'salmon';
   const feedback = document.getElementById(feedbackId);
-  feedback.innerHTML = message; // Use innerHTML for MathJax
+  feedback.innerHTML = message;
   if (window.MathJax) {
     MathJax.typesetPromise([feedback]);
   }
