finished 'lesson 4', the 10-question quiz for lesson 4, and the unit 1 section (5 questions) of the course test

--- a/Quiz3.html
+++ b/Quiz3.html
@@ -56,7 +56,7 @@ function check(btn, correct, message, feedbackId) {
 <div id="feedback1" style="margin-top:10px; font-weight:bold;"></div>
 
 <p> <img src="images/position_vs_time_7.png"><b>Which value correctly fits the blank?</b></p>
-<button class="quiz-btn" onclick="check(this, true, 'From v<sub>f</sub> = v<sub>i</sub> + at, v = at. So, v = 10 &times; 2 which finals to 20 m/s.', 'feedback2')">20 m/s</button>
+<button class="quiz-btn" onclick="check(this, true, 'Yes! That\'s correct. Use v<sub>f</sub> = v<sub>i</sub> + at to get v = at. Then, v = 10 &times; 2 which finals to 20 m/s✅.', 'feedback2')">20 m/s</button>
 <button class="quiz-btn" onclick="check(this, false, 'Not quite! Try again.', 'feedback2')">10 m/s</button>
 <button class="quiz-btn" onclick="check(this, false, 'Not quite! Try again.', 'feedback2')">15 m/s</button>
 <button class="quiz-btn" onclick="check(this, false, 'Not quite! Try again.', 'feedback2')">25 m/s</button>
